// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui/feed renders items 1`] = `
<div
  className="wrapper"
>
  <article
    className="article"
  >
    <div>
      <h2
        className="title"
      />
      <p
        className="excerpt"
      >
        a1
      </p>
      <div
        className="meta"
      >
        <span
          className="vote upvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,7L17,12H14V16H10V12H7L12,7M12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20Z"
            />
          </svg>
        </span>
        <span
          className="vote downvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="thumbnail"
    >
      <div
        className="src"
        height={120}
        objectFit="cover"
        src="https://www.taringa.net/article_background.svg"
        unoptimized={true}
        width={120}
      />
    </div>
  </article>
  <div
    className="message"
  >
    <button
      className="wrapper"
    >
      Fetch more
    </button>
  </div>
</div>
`;

exports[`ui/feed when has no more items renders end of stories message 1`] = `
<div
  className="wrapper"
>
  <article
    className="article"
  >
    <div>
      <h2
        className="title"
      />
      <p
        className="excerpt"
      >
        a1
      </p>
      <div
        className="meta"
      >
        <span
          className="vote upvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,7L17,12H14V16H10V12H7L12,7M12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20Z"
            />
          </svg>
        </span>
        <span
          className="vote downvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="thumbnail"
    >
      <div
        className="src"
        height={120}
        objectFit="cover"
        src="https://www.taringa.net/article_background.svg"
        unoptimized={true}
        width={120}
      />
    </div>
  </article>
  <div
    className="message"
  >
    <div
      className="wrapper"
    >
      End of stories
    </div>
  </div>
</div>
`;

exports[`ui/feed when is error renders error and try again button 1`] = `
<div
  className="wrapper"
>
  <h2
    className="title"
  >
    We have a little problem
  </h2>
  <p
    className="description"
  >
    Can't fetch feed. Please make sure you are connected to the internet.
  </p>
  <button
    className="button"
    onClick={[MockFunction]}
  >
    Try again
  </button>
</div>
`;

exports[`ui/feed when is error when is refetch error renders feed and error at the bottom 1`] = `
<div
  className="wrapper"
>
  <article
    className="article"
  >
    <div>
      <h2
        className="title"
      />
      <p
        className="excerpt"
      >
        a1
      </p>
      <div
        className="meta"
      >
        <span
          className="vote upvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,7L17,12H14V16H10V12H7L12,7M12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20Z"
            />
          </svg>
        </span>
        <span
          className="vote downvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="thumbnail"
    >
      <div
        className="src"
        height={120}
        objectFit="cover"
        src="https://www.taringa.net/article_background.svg"
        unoptimized={true}
        width={120}
      />
    </div>
  </article>
  <div
    className="message"
  >
    <div
      className="wrapper"
    >
      <h2
        className="title"
      >
        We have a little problem
      </h2>
      <p
        className="description"
      >
        Can't fetch feed. Please make sure you are connected to the internet.
      </p>
      <button
        className="button"
        onClick={[MockFunction]}
      >
        Try again
      </button>
    </div>
  </div>
</div>
`;

exports[`ui/feed when is fetching data renders loader 1`] = `
<div
  className="loader"
>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
</div>
`;

exports[`ui/feed when is fetching next page renders feed and loader at the end 1`] = `
<div
  className="wrapper"
>
  <article
    className="article"
  >
    <div>
      <h2
        className="title"
      />
      <p
        className="excerpt"
      >
        a1
      </p>
      <div
        className="meta"
      >
        <span
          className="vote upvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,7L17,12H14V16H10V12H7L12,7M12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22M12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20Z"
            />
          </svg>
        </span>
        <span
          className="vote downvotes"
        >
          <svg
            className="mdi-icon "
            fill="currentColor"
            height={22}
            viewBox="0 0 24 24"
            width={22}
          >
            <path
              d="M12,17L7,12H10V8H14V12H17L12,17M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4Z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="thumbnail"
    >
      <div
        className="src"
        height={120}
        objectFit="cover"
        src="https://www.taringa.net/article_background.svg"
        unoptimized={true}
        width={120}
      />
    </div>
  </article>
  <div
    className="loader"
  >
    <div
      className="wrapper"
    >
      <div
        className="meta"
      >
        <div
          className="title"
        />
        <div
          className="subtitle"
        />
      </div>
      <div
        className="thumbnail"
      />
    </div>
    <div
      className="wrapper"
    >
      <div
        className="meta"
      >
        <div
          className="title"
        />
        <div
          className="subtitle"
        />
      </div>
      <div
        className="thumbnail"
      />
    </div>
    <div
      className="wrapper"
    >
      <div
        className="meta"
      >
        <div
          className="title"
        />
        <div
          className="subtitle"
        />
      </div>
      <div
        className="thumbnail"
      />
    </div>
    <div
      className="wrapper"
    >
      <div
        className="meta"
      >
        <div
          className="title"
        />
        <div
          className="subtitle"
        />
      </div>
      <div
        className="thumbnail"
      />
    </div>
    <div
      className="wrapper"
    >
      <div
        className="meta"
      >
        <div
          className="title"
        />
        <div
          className="subtitle"
        />
      </div>
      <div
        className="thumbnail"
      />
    </div>
    <div
      className="wrapper"
    >
      <div
        className="meta"
      >
        <div
          className="title"
        />
        <div
          className="subtitle"
        />
      </div>
      <div
        className="thumbnail"
      />
    </div>
  </div>
</div>
`;

exports[`ui/feed when is idle renders loader 1`] = `
<div
  className="loader"
>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
  <div
    className="wrapper"
  >
    <div
      className="meta"
    >
      <div
        className="title"
      />
      <div
        className="subtitle"
      />
    </div>
    <div
      className="thumbnail"
    />
  </div>
</div>
`;
